# IntrinsicTime

./: .gitignore  README.md  pyproject.toml  requirements.txt
IntrinsicTime/: __init__.py
IntrinsicTime/IntrinsicTime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
IntrinsicTime/dcos_core/: dcos_core.py
IntrinsicTime/dcos_fractal/: dcos_fractal.md  dcos_fractal.py
IntrinsicTime/dcos_plot/: __init__.py  dcos_plot.py
dcos_core/: __init__.py  dcos_core.py
dcos_fractal/: __init__.py  dcos_fractal.py
dcos_utils/: __init__.py  dcos_utils.py
