[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IntrinsicTime"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" }
]
description = "Utilities for intrinsic time decomposition and fractal event analysis"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["numpy", "pandas", "scipy", "plotly"]

[tool.setuptools.packages.find]
where = ["IntrinsicTime"]
